edited Chapt 4 ... kindly work from Chap 4.6 onward

--- a/4vehicle-semantics-extraction.tex
+++ b/4vehicle-semantics-extraction.tex
@@ -11,10 +11,9 @@ This is then followed by the discussion of both the vehicle semantic extraction 
 
 %may be good to add a short paragraph to briefly describe and reinforce what "vehicle semantics extraction" is in relation to the big problem and that two extractions methods are introduced in this research and why two .... along with giving a brief distinction between the two.
 
-As the focus of this work revolves around car park surveillance video footages, color and motion information are usually key information used to describe vehicles activity. In order to design a retrieval engine for car park surveillance footage, an accurate extraction of these information are crucial. 
-
-\cc{ hmm... brief distinction between the two: one is prototype... the other one is better version?}
-
+As the focus of this work revolves around car park surveillance video footages, color and motion information are key information used to describe vehicles activity. With the goal of designing a retrieval engine for car park surveillance footage, an accurate extraction of these information is a crucial component of this work. 
+While there are several differences between both of the extraction methods introduced in this research, the predominant difference lies in the flexibility of the final output of these extraction modules.
+The extracted semantics from the \versionOneExt has similar properties to a \textit{keyword-based} system. Hence, the retrieval process was placed in a hit-or-miss situation. In order to enhance the retrieval process, the \versionTwoExt utilizes probability scores to describe the extracted semantics.
 
 
 As describe in Section \ref{subsec:scope}, the two major semantics extracted in the proposed algorithm are (i) Vehicle Color and (ii) Vehicle Trajectory. Other semantic information such as the time and date which were extracted will not discussed in detail as these are simple extraction based on the input file names.
@@ -28,12 +27,13 @@ what is semantics
 \section{Atom-based Quantization}
 \label{section:atoms}
 
-As the utilization of video data is the central focus in this work, there was a need for coming up with a way to easily manipulate and represent the video information. As video data can be commonly represented using the 3 dimensional space (X-axis, Y-axis, \& time-axis), there was an opportunity to convert the continuous data into discrete data blocks.     
+As the utilization of video data is the central focus in this work, there was a need for coming up with a way to easily manipulate and represent the video information. As video data can be  represented using the 3 dimensional space using X-axis, Y-axis, \& time-axis, quantization techniques can be applied here to convert the continuous data into discrete data blocks.     
 
+In order to design a framework for long term object semantics extraction from video data, this work adopted the concept of "atoms" as coined by \cite{castanon2016retrieval} which enabled quantization of the video input into individual 3D spatial-temporal cubes which consist of the X-axis, Y-axis and T-axis. In this work, an atom is defined as a group of cells at a similar spatial location, that spans a certain fixed number of frames; hence forming a spatio-temporal `cube'.
 
-In order to design a framework for large-scale extraction and retrieval of video semantics, this work adopted the concept of "atoms" as coined by \cite{castanon2016retrieval} which enabled quantization of the video input into individual 3D spatial-temporal cubes which consist of the X-axis, Y-axis and T-axis. In this work, an atom is defined as a group of cells at a similar spatial location, that spans a certain fixed number of frames; hence forming a spatio-temporal `cube'.
-
-As described in Section \ref{section:dataset_used}, the input video data has a resolution of 640$\times$480 pixels and frame rate of 10$fps$, the dimensions of each atoms ($\alpha$) were analytically set to $\alpha_{width}=32$ pixels, $\alpha_{height}=24$ pixels and $\alpha_{time}=10$ frames, which represents the temporal duration of one second. The resolution of the atom ($\alpha_{width},\alpha_{height}$) were set as such so that the video resolution can be uniformly divided by 20 atoms across both its width and height as illustrated in Figure \ref{fig:viewfromcamera}. Hence, with this setup, each atom can be uniquely identified using the $X, Y$ and $T$ identifiers.
+As described in Section \ref{section:dataset_used}, the input video data has a resolution of 640$\times$480 pixels and frame rate of 10$fps$, the dimensions of each atoms ($\alpha$) were 
+%analytically 
+set to $\alpha_{width}=32$ pixels, $\alpha_{height}=24$ pixels and $\alpha_{time}=10$ frames, which represents the temporal duration of one second. The resolution of the atom ($\alpha_{width},\alpha_{height}$) were set such that the video resolution can be uniformly divided by 20 atoms across both its width and height as illustrated in Figure \ref{fig:viewfromcamera}. Using this setup, each individual atom can be uniquely identified using the $X, Y$ and $T$ identifiers. 
 
 
 
@@ -69,10 +69,10 @@ The use of these atom-based spatial-temporal cube is paramount in this work. By 
 \end{comment}
 
 
-\section{Vehicle Extraction}
+\section{Vehicle Blobs Extraction}
 \label{subsection:fundamental}
 
-Before the video dataset can be channelled to the vehicle semantics extraction, some pre-processing work has to be done. The fundamental framework was adopted from a portion of the work done by \cite{lim2017} where the author developed a framework to detect moving objects in a video using popular techniques such as background subtraction was applied to differentiate between static background and moving objects as depicted in Figure \ref{fig:bgs}. 
+Before the video dataset can be channelled to the vehicle semantics extraction, some pre-processing work has to be done. The fundamental framework was adopted from a portion of the work done by \cite{lim2017} where the author developed a framework to detect moving objects in a video using popular techniques such as background subtraction to differentiate between static background and moving objects as depicted in Figure \ref{fig:bgs}. 
 
 \begin{figure}[htb!]
   \centering
@@ -116,9 +116,9 @@ The process is known as \textit{Opening} occurs when the morphology operations a
 
 Now with the background subtraction operation in place, the foreground objects can now be detected. Each of these foreground object are referred to as a \textit{blob}. Each of these blobs are then filtered using some handcrafted parameters to separate between vehicles and non-vehicles objects. To further enhance this process, a deep learning model was deployed to increase the probability of filtering non-vehicle blobs. 
 
-In the proposed method pipeline, the work of \cite{redmon2016you} namely YOLOv2 (You Only Look Once) - a deep learning model was deployed as a complementary module. Now, as YOLO is a deep learning model designed to be real-time object detection, the detection process incurred very little overhead to the overall computational time and cost. Here, the bounding box of each foreground blob is sent into the YOLO network as an input. The network will then divide the input into multiple smaller regions and perform prediction of the bounding box along with the class probability. As the YOLO model is pre-trained with "vehicle" as one of the many classes, no further retraining was done in the proposed method pipeline.
+In the proposed method framework, the work of \cite{redmon2016you} namely YOLOv2 (You Only Look Once) - a deep learning model was deployed as a complementary module. Now, as YOLO is a deep learning model designed to be real-time object detection, the detection process incurred very little overhead to the overall computational time and cost. Here, the bounding box of each foreground blob is sent into the YOLO network as an input. The network will then divide the input into multiple smaller regions and perform prediction of the bounding box along with the class probability. As the YOLO model is pre-trained with "vehicle" as one of the many classes, no further retraining was done in the proposed method pipeline.
 
-With that in place, each of the blobs which were identified as a vehicle were tracked, on the other hand, blobs which were not identified as a vehicle was left as a possible candidate. This is done in view of misidentification due to poor lighting conditions or error during the background subtraction process. For each of the vehicle blobs, the semantic extraction module can now proceed.  
+With that in place, each of the blobs which were identified as a vehicle were tracked. However, blobs which were not identified as a vehicle was left as a possible candidate. This is done in view of misidentification due to poor lighting conditions or error during the background subtraction process. For each of the vehicle blobs, the semantic extraction module can now proceed.  
 
 
 
@@ -127,7 +127,7 @@ With that in place, each of the blobs which were identified as a vehicle were tr
 \section{Semantic Extraction} 
 \label{section:semanticsExtraction}
 
-As object specific semantics from the scene provides deeper insights for surveillance purposes, as mention earlier, this work focuses on the extraction of two types of object specific semantics. These low level semantics are the Color and Motion semantics. Although several other semantics were extracted as well, the extraction of those semantics is not discussed in detail as they are simple extracting based on input data filenames. Table \ref{table:semantics} lists down all the semantics which were extracted in this work. The following subsections focuses on both the color and motion low-level semantics extraction process and framework.  
+Object specific semantics extracted from the scene is able to provide deeper insights for surveillance purposes. As mention in Section \ref{subsec:scope}, this work focuses on the extraction of two types of object specific semantics: i) Color and ii) Motion semantics. Although several other semantics were extracted as well, the extraction of those semantics is not discussed in detail as they are simple extracting based on input data filenames. Table \ref{table:semantics} lists down all the semantics which were extracted in this work. The following subsections focuses on both the color and motion low-level semantics extraction process and framework.  
 
 
 
@@ -152,9 +152,9 @@ As object specific semantics from the scene provides deeper insights for surveil
 \subsection{Color Semantic}
 \label{subsec:colorsemantics}
 
-Without a doubt, color information plays a significant role in field of useful semantics as it is often one of the most common information a user provides when they are tasked to describe an object from a given event in a particular scene. However, the process of extracting color information accurately is extremely challenging, especially in an outdoor setting. In these settings, the white balance of the said scene would appear very differently depending on various factors such as the ambient illumination during the different hours of the day or even weather conditions such as cloudy, rainy or sunshine would affect the overall scene. Several commercially available product such as 'Nix color sensor' \cite{nixsensorltd} and 'Adafruit RGB sensor' \cite{adafruit} makes use of an independent light source which has been calibrated as a means to tackle this challenge.
+Without a doubt, color information plays a significant role as a useful semantics as it is often one of the most common information a user provides when they are tasked to describe an object from a given event in a particular scene. However, the process of extracting color information accurately is extremely challenging, especially in an outdoor setting. In these settings, the white balance of the said scene would appear very differently depending on various factors such as the ambient illumination during the different hours of the day or even weather conditions such as cloudy, rainy or sunshine that may affect the overall scene. Several commercially available product such as 'Nix color sensor' \cite{nixsensorltd} and 'Adafruit RGB sensor' \cite{adafruit} makes use of an independent light source which has been calibrated as a means to tackle this challenge.
 
-As color terms are commonly derived from the Munsell Color system which created in the early 20th century by Professor Albert H. Munsell, this color system was investigated further to examined how the color terms were defined for the color extraction process. The Munsell Color System was designed to organize colors the way the human's eye sees - which is, by organizing colors according to their hues, followed by the chromatic range and the brightness values in a perceptually uniform manner. For each horizontal circle, the hues can be divided into 5 principle hues which are Red, Yellow, Green, Blue, and Purple. This setup allows another 5 intermediate hues between each principle hues, for example: Green-Blue hue, Purple-Red hue. 
+As color terms are commonly derived from the Munsell Color system which was created in the early 20th century by Professor Albert H. Munsell, this color system was investigated further to examined how the color terms were defined for the color extraction process. The Munsell Color System was designed to organize colors similar to how the human's eye sees - which is, by organizing colors according to their hues, followed by the chromatic range and the brightness values in a perceptually uniform manner. For each horizontal circle, the hues can be divided into 5 principle hues which are Red, Yellow, Green, Blue, and Purple. This setup allows another 5 intermediate hues between each principle hues, for example: Green-Blue hue, Purple-Red hue. 
 
 However, as previously discussed in Section \ref{section:litreview}, various color terms are used in the myriad of available standards. In the computing field, this creates a whole lot of problem as color terms are often presented with differing definitions and values. Hence, there is a dire need of determining the best way to extract and represent color values with its corresponding color terms. While the basic idea of colors seems to be a relatively simple idea for humans, machines on the other hand, do not understand the concept of colors. Modern computers generally represents color values using the Red-Green-Blue (RGB) values for most applications. Despite its frequent usage, it is difficult for humans to visualize a particular color when presented with three RGB values as these values does not directly translate the intuitive nature of a particular color. Along with that, it is also very difficult to visualize the difference between two colors using the RGB values only. 
 
@@ -171,7 +171,7 @@ However, as previously discussed in Section \ref{section:litreview}, various col
 \end{figure}
 
 
-Figure \ref{fig:munsell}(b) illustrates the property of the chroma and value scale available on the Munsell color system, for example, a hue at 2.5 Yellow-Red (YR) has a maximum chroma value which differs along the value axis. While the Munsell Color system provided a significant contribution in color term naming research, the irregularity along the chroma and value axis does not translate well in a modern color space as the modern color spaces are uniformly distributed along all axis. Hence, in order to better represent the color space, this work chose to work primarily on the Hue-Saturation-Value (HSV) color space with some minor usage of other color spaces. The use of the HSV color space is twofold, firstly, the ease of color representation as it closely resembles the Munsell Color System, and secondly the distance between two colors are now intuitive and linear. As HSV color space is commonly used, the conversion between the RGB and HSV color spaces are seamless and can easily introduced into the existing processing framework. 
+Figure \ref{fig:munsell}(b) illustrates the property of the chroma and value scale available on the Munsell color system, for example, a hue at 2.5 Yellow-Red (YR) has a maximum chroma value which differs along the value axis. While the Munsell Color system provided a significant contribution in color term naming research, the irregularity along the chroma and value axis does not translate well in a modern color space as the modern color spaces are uniformly distributed along all axis. Hence, in order to better represent the color space, this work chose to work primarily on the Hue-Saturation-Value (HSV) color space with some minor usage of other color spaces. The use of the HSV color space is twofold, firstly, the ease of color representation as it closely resembles the Munsell Color System, and secondly the distance between two colors are now intuitive and linear. As HSV color space is commonly used, the conversion between the RGB and HSV color spaces are seamless and can be easily introduced into the existing processing framework. 
 
 \begin{table}[]
 \centering
@@ -203,11 +203,11 @@ xkcd                                                & 954                       
 % https://www.crayola.com/explore-colors.aspx
 
 
-Table \ref{table:allcolorterms} lists several famous web color dictionary along with the number of color categories available in each of those color standards. Given that there are so many different color categories, this ultimately leads to another set of question: "How many color categories should be extracted for the color semantic? And why?". In this work, the eleven basic color terms in English proposed in a classic study of worldwide color naming by \cite{berlinandkay} was adopted. In their study, Berlin and Kay proposed that the naming of colors terms may differ due to different cultures, based on their findings, native English language speakers generally used eleven basic color terms. These terms had to have three common properties which are: i) Highly used, ii) Monolexemic - meaning a single(mono) word, and not compounded color term such as 'baby blue', and iii) agreed upon by native speakers of the language. With those definitions, the common color terms proposed are black, white, gray, brown, red, orange, yellow, purple, green, blue, and pink. However, the definition of color terms by themselves are insufficient and invokes another set of challenge, which is the representation of these colors in numerical terms which are commonly used in computer science. 
+Table \ref{table:allcolorterms} lists several famous web color dictionary along with the number of color categories available in each of those color standards. Given that there are so many different color categories, this ultimately leads to another set of question: "How many color categories should be extracted for the color semantic? And why?". In this work, the eleven basic color terms in English proposed in a classic study of worldwide color naming by \cite{berlinandkay} was adopted. In their study, Berlin and Kay proposed that the naming of colors terms may differ due to different cultures. Based on their findings, native English language speakers generally used eleven basic color terms. These terms had to have three common properties which are: i) Highly used, ii) Monolexemic - meaning a single(mono) word, and not compounded color term such as 'baby blue', and iii) agreed upon by native speakers of the language. With those definitions, the common color terms proposed are black, white, gray, brown, red, orange, yellow, purple, green, blue, and pink. However, the definition of color terms by themselves are insufficient and invokes another set of challenge- that is the representation of these colors in numerical terms which are typically used in computers. 
 
-However, those basic color terms defined were not associated with how colors are represented on a modern computer. Anatomically, there are three types of cons in the human retina, each of which are responsible over the receptiveness of colors in a particular type of wavelength. These wavelengths can be classified into three main categories: Short wavelengths light (420–440 nm), Medium  wavelengths light (534–545 nm) and Long wavelengths light (564–580 nm). As the number of con cells in the retina varies from each person, this, in turn affects the color perception of everyone. That, compounded with the fact that most monitor screens are not color calibrated professionally provided an opportunity for Munroe \cite{munroe2010color} to perform a internet wide crowd-sourcing survey on color terms and their respective numeral representation according to how colors are displayed on typical monitors.
+However, those basic color terms defined were not associated with how colors are represented on a modern computer. Anatomically, there are three types of cones in the human retina, each of which are responsible over the receptiveness of colors in a particular type of wavelength. These wavelengths can be classified into three main categories: Short wavelengths light (420–440 nm), Medium  wavelengths light (534–545 nm) and Long wavelengths light (564–580 nm). As the number of cones cells in the retina varies from each person, this, in turn affects the color perception of everyone. That, compounded with the fact that most monitor screens are not color calibrated professionally provided an opportunity for Munroe \cite{munroe2010color} to perform an internet crowd-sourcing survey on color terms and their respective numeral representation according to how colors are displayed on typical monitors.
 
-In Munroe's experiments, 222,500 user sessions consisting of 40,000 women and 100,000 men, provided over five million colors their respective color terms. With the collected results, Munroe then proceeds to map a RGB tuple to a particular color term according to the highest frequency of responses. The mapping of these terms were done by averaging results of several stochastic hill climbing algorithms. At the end of Munroe's experiment, 954 color terms were assigned to a set of RGB tuples of equal size. Figure \ref{fig:xkcd} shows the mapping of dominant color terms over three fully saturated faces of the RGB cube. Now, by combining the work of Berlin and Kay along with the work of Munroe, the eleven basic color terms can now be translated into modern color tuples using the information collected. These color terms and the corresponding HEX values are listed in Table \ref{table:colorshex} and in this work, these values are treated as ground truth color data. 
+In Munroe's experiments, 222,500 user sessions consisting of 40,000 women and 100,000 men, provided over five million colors according to the respective color terms. With the collected results, Munroe then proceeds to map a RGB tuple to a particular color term according to the highest frequency of responses. The mapping of these terms were done by averaging results of several stochastic hill climbing algorithms. At the end of Munroe's experiment, 954 color terms were assigned to a set of RGB tuples of equal size. Figure \ref{fig:xkcd} shows the mapping of dominant color terms over three fully saturated faces of the RGB cube. Now, by combining the work of Berlin and Kay along with the work of Munroe, the eleven basic color terms can now be translated into modern color tuples using the information collected. These color terms and the corresponding HEX values are listed in Table \ref{table:colorshex} and in this work, these values are treated as ground truth color data. 
 
 
 \begin{figure}[hbt!]\centering
@@ -248,15 +248,15 @@ In Munroe's experiments, 222,500 user sessions consisting of 40,000 women and 10
 
 \subsection{Motion Semantic}
 
-The use of video data for surveillance purposes no doubt lies in its ability to capture motion information. These information are usually provided by users when tasked to describe an action which occurred in a given scene. In this work, the collection motion performed by a vehicle in the scene is denoted as a vehicle's trajectory.  
+The use of video data for surveillance purposes no doubt lies in its ability to capture motion information. These information are usually provided by users when tasked to describe an action which occurred in a given scene. In this work, the collective motion performed by a vehicle in the scene is denoted as a vehicle's trajectory.  
 
-Typically, a user describes motion information using a combination of several information such as time of occurrence, location and how the motion occurred. Traditionally, the motion information from videos are converted into text based descriptions using handcrafted methods. Given the following example: "A yellow vehicle was turning into the cross section between Road Alpha and Road Beta at 3:30pm when a black vehicle came rushing over and hitting a pedestrian in the process during commotion", this statement could be converted into a statement such as "yellow car turn left Road Alpha and Road Beta". 
+Typically, a user describes motion information using a combination of several information such as time of occurrence, location and how the motion occurred. Traditionally, the motion information from videos are converted into text based descriptions using handcrafted methods. Given the following example: "A yellow vehicle was turning into the cross section between Road Alpha and Road Beta at 3:30pm when a black vehicle came rushing over and hitting a pedestrian in the process during commotion", this statement could be converted into a keyword-based statement such as "yellow car turn left Road Alpha and Road Beta". 
 
-While motions are not as subjective as the concept of colors, text based descriptions of motion events are less intuitive when compared to a graphical description. Hence, this work aims to extract motion information and present them in a graphical form which is naturally more intuitive hence providing an accurate description of an event.
+However, keyword-based statements like these are not intuitive to users who are not familiar with the terminology used in the system. While motions are not as subjective as the concept of colors, text based descriptions of motion events are less intuitive when compared to a graphical description. Hence, this work aims to extract motion information which can be  represented in a graphical form, with the goal of providing a naturally more intuitive and accurate description of an event.
 
 
 
-In the case of a car park scene, the trajectory information from each vehicle is important, it is a paramount task to ensure that the motion information from each vehicle is captured and stored. Since the types of motion performed in a car park setting varies from user to user, instead of generating a fine representation of motion such the conventional motion vector, these information were broken into smaller motion information and stored into the database. Both the suggested motion semantics extraction frameworks deploys different extraction methods which would be discussed further in this chapter.
+In the case of a car park scene, the trajectory information from each vehicle is important. It is a paramount task to ensure that the motion information from each vehicle is captured and stored. Since the types of motion performed in a car park setting varies from user to user, instead of generating a fine representation of motions such as the conventional motion vector, these information were broken into smaller motion information and stored into the database. Both the proposed motion semantics extraction frameworks employs different extraction methods which would be discussed further in this chapter.
 
 
 
@@ -269,18 +269,21 @@ In the case of a car park scene, the trajectory information from each vehicle is
 In this subsection, the extraction process of the other low level semantics are discussed briefly. As mentioned earlier, several other semantics were extracted for this work, namely, the time and date information, object type as well as object size. As the extractions of these semantics were simple and/or played little-to-no roles in the both the extraction module and retrieval engine, the process will be described here.
 
 \subsubsection{Date \& Time}
-During course of the dataset collection, the camera was set to name the recorded files according to the time and date. As described in Section \ref{section:dataset_used}, the camera was set to record video clips from 8:30am to 6:30pm in the evening with each clip being 6 minutes long. As the filename contains both the time and date information, the date information can be easily extracted while the time information can be deduced when a vehicle is observed in the car park scene. 
+
+Both date and time information are valuable information in the context of surveillance retrieval engines. As these information are important, the camera was set to name the recorded files according to the time and date during the course of the dataset collection. As the filename contains both the time and date information, the date information can be easily extracted while the time information can be deduced when a vehicle is observed in the car park scene as follow, 
 
 \begin{align}
 \label{eq:file_timing}
-	Current Frame Time = (Video Duration [6 mins] \times \frac{Current Frame}{Total Frames}) + Time_{filename} 
+	Time_{Current Frame}  = (Video Duration \times \frac{Current Frame}{Total Frames}) + Time_{filename}, 
 \end{align}
 
+where~$VideoDuration$ is 6 minutes (see Section \ref{section:dataset_used}) and ~$Time_{filename}$ is the time information extracted from the last six digits of filename (excluding the file extension). Upon extracting these information, simple formatting is done to ensure these information conform to the typical SQL database requirements.
 
-Upon extracting these information, simple formating is done to ensure these information conform to the typical SQL database requirements.
+%As described in Section \ref{section:dataset_used}, the camera was set to record video clips from 8:30am to 6:30pm in the evening with each clip being 6 minutes long. 
+
 
 \subsubsection{Object Type \& Size}
-Since the object of interest in this work are the vehicles in the car park scene, YOLOv2 was used to assist the validation of the foreground object detected by the background subtraction method as described in Section \ref{subsection:fundamental}. With that in place, all the objects which were detected were assumed to fall under the "vehicle" class. As for the object size, the foreground objects' bounding box's size were saved in the database as the object size.
+Since the object of interest in this work are the vehicles in the car park scene, YOLOv2 was used to assist the validation of the foreground object detected by the background subtraction method as described in Section \ref{subsection:fundamental}. With that in place, all the objects which were detected were assumed to fall under the "vehicle" class. As for the object size, the size of the foreground objects' bounding box were saved in the database as the object size.
 
 
 
